I edited my homepage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,176 @@
-Hej
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-522MEDH48E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-522MEDH48E');
+  </script>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>TOVA PERSSON</title>
+
+  <style>
+    :root {
+      --bg-overlay: rgba(0,0,0,.45);
+      --text:#ffffff;
+      --accent:#ffffff;
+      --btn-bg:#111111;
+      --btn-bg-hover:#000000;
+      --btn-text:#ffffff;
+      --radius:14px;
+      --shadow: 0 10px 25px rgba(0,0,0,.15);
+    }
+    * { box-sizing:border-box }
+    html,body { height:100% }
+    body {
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      color:#111;
+      background:#f7f7f8;
+      line-height:1.5;
+    }
+
+    /* Hero/Header */
+    .hero {
+      position:relative;
+      min-height:68vh;
+      display:grid;
+      place-items:center;
+      text-align:center;
+      overflow:hidden;
+      border-bottom-left-radius: 28px;
+      border-bottom-right-radius: 28px;
+      box-shadow: var(--shadow);
+      background:#000; /* fallback while image loads */
+    }
+    .hero::before {
+      content:"";
+      position:absolute;
+      inset:0;
+      background-image:url('https://image.hm.com/content/dam/global_campaigns/season_02/women/start-page-assets/week-35/WS32W-16x9-startpage-women-teaser-1-wk35.jpg?imwidth=4800');
+      background-size:cover;
+      background-position:center;
+      filter:contrast(1.05) saturate(1.1);
+      transform:scale(1.03);
+    }
+    .hero::after {
+      /* dark overlay for readable text */
+      content:"";
+      position:absolute;
+      inset:0;
+      background:var(--bg-overlay);
+    }
+    .hero-inner {
+      position:relative;
+      z-index:1;
+      padding:clamp(16px,4vw,32px);
+    }
+    .title {
+      margin:0 0 24px;
+      letter-spacing:.25em;
+      font-weight:800;
+      font-size: clamp(36px, 7vw, 96px);
+      color:var(--text);
+      text-shadow: 0 6px 30px rgba(0,0,0,.35);
+    }
+
+    /* Buttons row */
+    .actions {
+      display:flex;
+      gap:14px;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
+    .btn {
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding:14px 22px;
+      border-radius: var(--radius);
+      font-weight:600;
+      text-decoration:none;
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      border: 1px solid rgba(255,255,255,.2);
+      transition: transform .15s ease, box-shadow .15s ease, background .15s ease, opacity .15s ease;
+      box-shadow: 0 6px 16px rgba(0,0,0,.25);
+      will-change: transform;
+    }
+    .btn:hover {
+      transform: translateY(-2px);
+      background: var(--btn-bg-hover);
+    }
+    .btn:active {
+      transform: translateY(0);
+      opacity:.95;
+    }
+    .btn.outline {
+      background:transparent;
+      color:var(--text);
+      border:1.5px solid rgba(255,255,255,.7);
+      backdrop-filter: blur(2px);
+    }
+
+    /* Content */
+    main {
+      max-width: 900px;
+      margin: 32px auto;
+      padding: 0 20px 80px;
+    }
+    section {
+      background:#fff;
+      border-radius: 18px;
+      padding: clamp(18px,3vw,28px);
+      box-shadow: var(--shadow);
+    }
+    h2 {
+      margin-top:0;
+      font-size: clamp(22px,3.5vw,32px);
+    }
+    p {
+      margin:.5em 0 0;
+      color:#333;
+    }
+    .muted { color:#6b7280 }
+
+    /* Small footer */
+    footer {
+      text-align:center;
+      color:#6b7280;
+      font-size:14px;
+      padding: 24px 16px;
+    }
+  </style>
+</head>
+<body>
+  <header class="hero" role="banner">
+    <div class="hero-inner">
+      <h1 class="title">TOVA PERSSON</h1>
+      <div class="actions">
+        <a class="btn" href="#om-mig" aria-label="Gå till Om mig">Om mig</a>
+        <a class="btn outline" href="https://www2.hm.com/se_se/index.html" target="_blank" rel="noopener" aria-label="Öppna H&M i ny flik">H&M</a>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section id="om-mig" aria-labelledby="om-mig-rubrik" style="display: flex; gap: 20px; align-items: flex-start;">
+      <!-- Kvadratisk bild till vänster -->
+      <img src="DSC_3007.JPG" alt="Bild på Tova Persson"
+           style="width:200px; height:200px; object-fit:cover; border-radius:12px; box-shadow:0 6px 16px rgba(0,0,0,0.2);">
+
+      <!-- Textboxen till höger -->
+      <div>
+        <h2 id="om-mig-rubrik">Om mig</h2>
+        <p class="muted"></p>
+        <p><em>Jag heter Tova</em></p>
+      </div>
+    </section>
+  </main>
+</body>
+</html>
