--- a/index.html
+++ b/index.html
@@ -75,29 +75,12 @@
       background:color-mix(in srgb, var(--bg) 92%, #fff 8%);
       padding:0;
     }
-    .topbar{
-      display:flex; justify-content:center; align-items:center;
-      padding:16px 24px; max-width:100%;
-      overflow-x:auto; -webkit-overflow-scrolling:touch;
-    }
-    .topmenu{
-      display:flex; align-items:center; flex-wrap:nowrap; white-space:nowrap;
-      gap:clamp(18px, 4vw, 56px);
-      width:max-content;
-      margin:0 auto;
-    }
-    .topmenu a, .topmenu .loc{
-      text-transform:uppercase;
-      letter-spacing:.35em;
-      font-size:clamp(10px, 1.0vw, 14px);
-      color:var(--muted);
-      text-align:center;
-    }
+    .topbar{ display:flex; justify-content:center; align-items:center; padding:16px 24px; max-width:100%; overflow-x:auto; -webkit-overflow-scrolling:touch; }
+    .topmenu{ display:flex; align-items:center; flex-wrap:nowrap; white-space:nowrap; gap:clamp(18px, 4vw, 56px); width:max-content; margin:0 auto; }
+    .topmenu a, .topmenu .loc{ text-transform:uppercase; letter-spacing:.35em; font-size:clamp(10px, 1.0vw, 14px); color:var(--muted); text-align:center; }
     .topmenu a:hover{ color:var(--fg) }
 
     .full-bleed{ width:90vw; margin-left:calc(50% - 50vw); }
-
-    /* Centra bannern under porträttet exakt */
     .masthead .full-bleed{ width:90vw; margin:0 auto; }
     .masthead .full-bleed img{ display:block; margin:0 auto; }
 
@@ -136,29 +119,11 @@
       gap:clamp(16px,4vw,40px);
       align-items:center; justify-items:center;
     }
-    .possible-big{
-      grid-area:title;
-      font-family:'Playfair Display',serif;
-      font-weight:700; line-height:.9; letter-spacing:-.01em;
-      font-size:clamp(52px,12svh,18svh);
-      margin:0; text-align:center;
-    }
-    .stack{
-      list-style:none; margin:0; padding:0;
-      display:flex; flex-direction:column; gap:10px;
-      font-family:'Playfair Display', serif; font-weight:600; font-style:italic;
-      font-size:clamp(14px, 1.9vw, 24px); line-height:1.25;
-      color:color-mix(in srgb, var(--fg) 92%, #000 8%); text-align:center;
-    }
-    .stack-top{ grid-area:top; }
-    .stack-bottom{ grid-area:bottom; }
-    .stack-left{ grid-area:left; text-align:right; align-items:flex-end; }
-    .stack-right{ grid-area:right; align-items:flex-start; }
+    .possible-big{ grid-area:title; font-family:'Playfair Display',serif; font-weight:700; line-height:.9; letter-spacing:-.01em; font-size:clamp(52px,12svh,18svh); margin:0; text-align:center; }
+    .stack{ list-style:none; margin:0; padding:0; display:flex; flex-direction:column; gap:10px; font-family:'Playfair Display', serif; font-weight:600; font-style:italic; font-size:clamp(14px, 1.9vw, 24px); line-height:1.25; color:color-mix(in srgb, var(--fg) 92%, #000 8%); text-align:center; }
+    .stack-top{ grid-area:top; } .stack-bottom{ grid-area:bottom; } .stack-left{ grid-area:left; text-align:right; align-items:flex-end; } .stack-right{ grid-area:right; align-items:flex-start; }
     @media (max-width: 900px){
-      .ring{
-        grid-template-columns:1fr;
-        grid-template-areas:"title" "top" "left" "right" "bottom";
-      }
+      .ring{ grid-template-columns:1fr; grid-template-areas:"title" "top" "left" "right" "bottom"; }
       .stack-left,.stack-right{ text-align:center; align-items:center; }
     }
 
@@ -169,18 +134,13 @@
       width:min(560px, 40vw); max-width:90%; z-index:2;
       height:clamp(260px, 45vh, 560px); display:flex;
     }
-    #promo .cta-list{
-      list-style:none; margin:0; padding:0 0 clamp(8px,1.6vh,18px) 0; width:100%;
-      display:flex; flex-direction:column; justify-content:flex-end; gap:clamp(6px,1.2vh,12px); height:100%;
-    }
+    #promo .cta-list{ list-style:none; margin:0; padding:0 0 clamp(8px,1.6vh,18px) 0; width:100%; display:flex; flex-direction:column; justify-content:flex-end; gap:clamp(6px,1.2vh,12px); height:100%; }
     #promo .cta-list li{ text-align:right; }
     #promo .cta-list a{
-      display:inline-block;
-      color:#fff; text-decoration:none;
+      display:inline-block; color:#fff; text-decoration:none;
       font-family:'Garet', Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial;
       text-transform:uppercase; letter-spacing:.28em; font-weight:700;
-      font-size:clamp(16px, 2.2vw, 40px);
-      padding:.15em 0 .35em;
+      font-size:clamp(16px, 2.2vw, 40px); padding:.15em 0 .35em;
       text-align:right; text-shadow:0 2px 4px rgba(0,0,0,.35);
       border-bottom:2px solid rgba(255,255,255,.98);
     }
@@ -209,7 +169,7 @@
 
     :focus-visible{ outline:2px dashed color-mix(in srgb, var(--fg) 70%, transparent); outline-offset:3px; border-radius:8px }
 
-    /* ===== PROJECTS: kompakt så sektionen ryms i en “sida” ===== */
+    /* ===== PROJECTS: kompakt ===== */
     #projects.page{ padding-block: clamp(8px, 4vh, 28px); }
     #projects .kicker{ font-size:clamp(12px,1.6vw,16px); letter-spacing:.35em; }
     #projects .projects{ gap:12px; margin-top:10px; }
@@ -219,8 +179,18 @@
     #projects .title{ font-size:14px; }
     #projects .muted{ font-size:12px; }
     @media (max-width:1100px){ #projects .projects{ grid-template-columns: repeat(2,1fr); } }
-    @media (max-width:640px){ #projects .projects{ grid-template-columns: 1fr; }
-      #projects .thumb{ aspect-ratio: 16 / 9; } }
+    @media (max-width:640px){ #projects .projects{ grid-template-columns: 1fr; } #projects .thumb{ aspect-ratio: 16 / 9; } }
+
+    /* === CTA under bannern (inne i #promo) === */
+    .below-banner-cta{ display:flex; justify-content:center; margin-top:16px; }
+    .bottom-link-btn{
+      display:inline-block; padding:.75rem 1.25rem; border-radius:9999px;
+      background:var(--fg); color:var(--bg); font-weight:700; letter-spacing:.12em; text-transform:uppercase;
+      box-shadow:0 8px 24px rgba(0,0,0,.18);
+    }
+    .bottom-link-btn:hover{ opacity:.95; transform:translateY(-1px); transition:.12s ease }
+
+    footer{ text-align:center; margin-top:32px; }
   </style>
 </head>
 <body>
@@ -262,8 +232,7 @@
       <section id="about" class="page" aria-labelledby="about-h" style="text-align:center;">
         <h2 id="about-h" class="kicker" style="margin:0 0 10px">A B O U T  M E</h2>
         <p class="about">
-          Jag arbetar med marknadsföring och kampanjer – från idé och strategi till produktion och rollout.
-          Jag gillar tydliga budskap, enkel grafisk form och mätbara resultat.
+          I enjoy working where analysis meets creativity. For me, growth marketing is about testing, measuring, and optimizing until I find what truly works. I’m drawn to clear messaging, simple design, and results that can be tracked.
         </p>
       </section>
 
@@ -379,15 +348,25 @@
             <ul class="cta-list">
               <li><a href="mailto:tova.epersson@gmail.com" data-gtm="cta">Contact me</a></li>
               <li><a href="Tova_Persson_CV.pdf" download="Tova_Persson_CV.pdf" data-gtm="cta">Resume</a></li>
-              <li><a href="https://www.linkedin.com/in/tovas" target="_blank" rel="noopener" data-gtm="cta">LinkedIn</a></li>
+              <li><a href="https://www.linkedin.com/in/tovas" data-gtm="cta" rel="noopener">LinkedIn</a></li>
             </ul>
           </div>
         </div>
+
+        <!-- CTA precis under bannern (inne i #promo) -->
+        <div class="below-banner-cta" aria-label="Länk till Jespers sida">
+          <a
+            id="jespers-link"
+            class="bottom-link-btn"
+            href="https://tovapersson.github.io/examples/"
+            data-gtm="cta"
+          >Jespers länk</a>
+        </div>
       </section>
 
-      <!-- (Kontaktsektionen borttagen) -->
-
-      <footer>© <span id="year"></span> Tova Persson</footer>
+      <footer>
+        © <span id="year"></span> Tova Persson
+      </footer>
     </main>
   </div>
 
@@ -494,7 +473,6 @@
   <!-- NEW: Tid i sektion + scrolldjup per sektion -->
   <script>
     (function sectionMetrics(){
-      // Välj sektioner att mäta
       const sectionIds = ['about','projects','possible','promo'];
       const sections = sectionIds.map(id => document.getElementById(id)).filter(Boolean);
       if (!sections.length) return;
@@ -505,7 +483,6 @@
         entries.forEach((e) => {
           const id = e.target.id;
           if (e.isIntersecting && e.intersectionRatio >= 0.5) {
-            // avsluta tidigare
             if (active && active !== id) {
               const spent = Math.round((performance.now() - start) / 1000);
               window.dataLayer.push({ event: 'section_time', section: active, seconds: spent });
@@ -539,9 +516,8 @@
           const rect = sec.getBoundingClientRect();
           const secTop = st + rect.top;
           const secH = sec.offsetHeight || rect.height;
-          const denom = Math.max(1, secH - vh); // undvik /0 för korta sektioner
+          const denom = Math.max(1, secH - vh);
 
-          // progress ~ var i sektionen viewporten befinner sig
           const progress = Math.max(0, Math.min(1, (st - secTop + vh / 2) / denom));
           const pct = Math.round(progress * 100);
 
@@ -565,7 +541,7 @@
 
       window.addEventListener('scroll', onScroll, { passive: true });
       window.addEventListener('resize', () => checkSectionDepth(), { passive: true });
-      checkSectionDepth(); // initial
+      checkSectionDepth();
     })();
   </script>
 </body>
