Uppdaterat bannerbild och länkar

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
       <section id="promo" class="page">
         <div class="frame">
-          <img src="you.png" alt="Contact">
+          <img src="contactme.png" alt="Contact">
           <div class="overlay">
             <ul class="cta-list">
               <li>
